Analysis of Reviews

--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -20,7 +20,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YdLF3es64989",
-        "outputId": "93f8378f-9b85-4363-8c42-9233068a51fd"
+        "outputId": "12a9e7b5-ba74-4b97-f865-4b86c5718090"
       },
       "source": [
         "import os\r\n",
@@ -46,27 +46,23 @@
         "import findspark\r\n",
         "findspark.init()"
       ],
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Ign:1 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "Get:2 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
-            "Hit:3 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "Get:4 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
-            "Get:5 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-            "Ign:6 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:7 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:8 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Get:9 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
-            "Hit:10 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
-            "Get:11 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ Packages [41.5 kB]\n",
-            "Get:12 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
-            "Hit:13 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
-            "Get:16 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [1,704 kB]\n",
-            "Get:17 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [872 kB]\n",
-            "Fetched 2,889 kB in 3s (1,027 kB/s)\n",
+            "\r0% [Working]\r            \rHit:1 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
+            "\r0% [Waiting for headers] [Waiting for headers] [Connected to cloud.r-project.or\r                                                                               \rHit:2 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "\r                                                                               \rHit:3 http://archive.ubuntu.com/ubuntu bionic-updates InRelease\n",
+            "\r                                                                               \rHit:4 http://security.ubuntu.com/ubuntu bionic-security InRelease\n",
+            "\r                                                                               \rHit:5 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
+            "\r0% [Waiting for headers] [Connected to cloud.r-project.org (13.227.209.45)] [Co\r0% [1 InRelease gpgv 15.9 kB] [Waiting for headers] [Connected to cloud.r-proje\r                                                                               \rHit:6 http://archive.ubuntu.com/ubuntu bionic-backports InRelease\n",
+            "\r0% [1 InRelease gpgv 15.9 kB] [Connected to cloud.r-project.org (13.227.209.45)\r                                                                               \rHit:7 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
+            "\r                                                                               \r0% [1 InRelease gpgv 15.9 kB] [Waiting for headers] [Waiting for headers]\r                                                                         \rHit:8 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
+            "Ign:9 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "Ign:10 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:11 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
+            "Hit:12 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
             "Reading package lists... Done\n"
           ],
           "name": "stdout"
@@ -80,27 +76,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5eUnwcWV5Pgr",
-        "outputId": "90ff0fdf-75c6-48b0-ad8f-f07f26a4f83e"
+        "outputId": "9aae2659-6505-4674-e2f1-c066c33f12b1"
       },
       "source": [
         "# Download the Postgres driver that will allow Spark to interact with Postgres.\r\n",
         "!wget https://jdbc.postgresql.org/download/postgresql-42.2.16.jar"
       ],
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-01-03 01:44:04--  https://jdbc.postgresql.org/download/postgresql-42.2.16.jar\n",
+            "--2021-01-03 16:43:57--  https://jdbc.postgresql.org/download/postgresql-42.2.16.jar\n",
             "Resolving jdbc.postgresql.org (jdbc.postgresql.org)... 72.32.157.228, 2001:4800:3e1:1::228\n",
             "Connecting to jdbc.postgresql.org (jdbc.postgresql.org)|72.32.157.228|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1002883 (979K) [application/java-archive]\n",
-            "Saving to: ‘postgresql-42.2.16.jar’\n",
+            "Saving to: ‘postgresql-42.2.16.jar.1’\n",
             "\n",
-            "postgresql-42.2.16. 100%[===================>] 979.38K  --.-KB/s    in 0.1s    \n",
+            "postgresql-42.2.16. 100%[===================>] 979.38K  1.69MB/s    in 0.6s    \n",
             "\n",
-            "2021-01-03 01:44:04 (6.63 MB/s) - ‘postgresql-42.2.16.jar’ saved [1002883/1002883]\n",
+            "2021-01-03 16:43:58 (1.69 MB/s) - ‘postgresql-42.2.16.jar.1’ saved [1002883/1002883]\n",
             "\n"
           ],
           "name": "stdout"
@@ -116,7 +112,7 @@
         "from pyspark.sql import SparkSession\r\n",
         "spark = SparkSession.builder.appName(\"BigData-Challenge\").config(\"spark.driver.extraClassPath\",\"/content/postgresql-42.2.16.jar\").getOrCreate()"
       ],
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -126,7 +122,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EEUYuq6s5ckV",
-        "outputId": "d0730ec3-b758-4731-c423-f2779e99db76"
+        "outputId": "a923f636-1959-421d-8c29-5e45b4c6c3a6"
       },
       "source": [
         "from pyspark import SparkFiles\r\n",
@@ -135,7 +131,7 @@
         "df = spark.read.option(\"encoding\", \"UTF-8\").csv(SparkFiles.get(\"\"), sep=\"\\t\", header=True, inferSchema=True)\r\n",
         "df.show()"
       ],
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,14 +174,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-iipxMUF5jqp",
-        "outputId": "308af1ae-5815-4111-95a7-4af09e19f872"
+        "outputId": "779e71cb-e91f-4df8-a6b4-8570b869af30"
       },
       "source": [
         "# Create the vine_table. DataFrame\r\n",
         "vine_df = df.select([\"review_id\", \"star_rating\", \"helpful_votes\", \"total_votes\", \"vine\", \"verified_purchase\"])\r\n",
         "vine_df.show()"
       ],
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,14 +224,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5CP1wW0K8__p",
-        "outputId": "1ca7ae89-5ead-4952-dc53-b924d8aed764"
+        "outputId": "73db0c83-c12f-4725-f72b-05ceb0134318"
       },
       "source": [
         "# DataFrame where there are 20 or more total votes\r\n",
         "vine_filter1_df= vine_df.filter(\"total_votes >= 20\")\r\n",
         "vine_filter1_df.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,12 +274,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EJfq_8HBdoMG",
-        "outputId": "38394106-f393-4dda-9be9-ccb9b319d075"
+        "outputId": "83135983-67d3-4849-d33b-96d5cd9451eb"
       },
       "source": [
         "vine_filter1_df.dtypes"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +296,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -322,14 +318,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "na5_h5cQ9nRs",
-        "outputId": "514a48d3-3918-4d10-eb96-14e96cffd910"
+        "outputId": "4f76c8de-3507-4d1e-8832-c6fcedb9faa6"
       },
       "source": [
         "# DataFrame showing where helpful votes divided by total votes >= 50% \r\n",
         "vine_filter2= vine_filter1_df[(vine_filter1_df['helpful_votes']/vine_filter1_df['total_votes'] >= 0.5) ]\r\n",
         "vine_filter2.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,14 +368,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PkiYT2eO7LpL",
-        "outputId": "2c1da38e-d0fd-4a14-a060-c55d9b2a1092"
+        "outputId": "4ff1b9c4-8196-4ef0-859c-9aa591fae475"
       },
       "source": [
-        "#DataFrame retrieving all rows where a review was written, vine=Y\r\n",
+        "#DataFrame retrieving all Vine reviews, vine=Y\r\n",
         "vine_y= vine_filter2[(vine_filter2['vine' ]=='Y')]\r\n",
         "vine_y.show()"
       ],
-      "execution_count": 11,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,14 +418,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QM2SNYnkmRtJ",
-        "outputId": "4221d4cb-9f94-477a-ec1e-0fc9bf3ee820"
+        "outputId": "2e6ea410-f13f-4f4d-8823-d4123f6b56c7"
       },
       "source": [
-        "#DataFrame retrieving all rows where reviews were not written, vine=N\r\n",
+        "#DataFrame retrieving all non-Vine reviews, vine=N\r\n",
         "vine_n= vine_filter2[(vine_filter2['vine' ]=='N')]\r\n",
         "vine_n.show()\r\n"
       ],
-      "execution_count": 12,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,14 +468,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jIFft1wS9FEI",
-        "outputId": "89963bd6-aea8-4ab4-ccde-06dec208f74b"
+        "outputId": "36ff2350-2b7a-4d93-e376-51a955b43717"
       },
       "source": [
         "#Total number of reviews for all Vine reviews\r\n",
         "total_reviews_y= vine_y.count()\r\n",
-        "total_reviews"
+        "total_reviews_y"
       ],
-      "execution_count": 16,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,7 +487,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 21
         }
       ]
     },
@@ -501,75 +497,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "9AgHsnEiogIx",
-        "outputId": "450d1c1c-bb3f-4c28-ec38-16a5902eabdb"
-      },
-      "source": [
-        "# Number of 5-star reviews for all vine reviews\r\n",
-        "five_star_reviews_y= vine_y[(vine_y[\"star_rating\"] == 5)].count()\r\n",
-        "five_star_reviews_y"
-      ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "432"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 17
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VHKd8Kzy9ISv",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d7c2e31b-4e3a-4e31-8e93-726db6320d78"
-      },
-      "source": [
-        "# Percentage of 5-star reviews for all Vine reviews\r\n",
-        "five_star_reviews_y_pct = (five_star_reviews_y/total_reviews_y) * 100\r\n",
-        "five_star_reviews_y_pct\r\n"
-      ],
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "34.12322274881517"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 18
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qf6DfCj8dn2W",
-        "outputId": "c0b36bb5-8a03-426f-8f9e-a6c07fced2f8"
+        "id": "ROJ2P9AgJ4Si",
+        "outputId": "f8443d14-e36d-4384-d648-12e0dab13072"
       },
       "source": [
         "#Total number of reviews for all non-Vine reviews\r\n",
         "total_reviews_n= vine_n.count()\r\n",
         "total_reviews_n"
       ],
-      "execution_count": 19,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -581,7 +517,37 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9AgHsnEiogIx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5f6a325f-2668-4b67-88d1-f7918c023ae7"
+      },
+      "source": [
+        "# Number of 5-star reviews for all vine reviews\r\n",
+        "five_star_reviews_y= vine_y[(vine_y[\"star_rating\"] == 5)].count()\r\n",
+        "five_star_reviews_y"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "432"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
         }
       ]
     },
@@ -591,15 +557,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "x2li2_Eke9GS",
-        "outputId": "42850611-4857-4321-f8ea-1908ad5f1b2d"
+        "id": "c8jj6OqbKF7m",
+        "outputId": "d61bb9cd-8e9a-4cbd-ca12-811c63f27128"
       },
       "source": [
         "# Number of 5-star reviews for all non-vine reviews\r\n",
         "five_star_reviews_n= vine_n[(vine_n[\"star_rating\"] == 5)].count()\r\n",
-        "five_star_reviews_n\r\n"
+        "five_star_reviews_n"
       ],
-      "execution_count": 20,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -611,26 +577,56 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 24
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "VHKd8Kzy9ISv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ZNmbaKI6grJQ",
-        "outputId": "5aad2d0c-0fb0-4d30-eb59-bbaa8b408634"
+        "outputId": "ef1aaa18-142d-474c-cdc4-9b45cc626580"
+      },
+      "source": [
+        "# Percentage of 5-star reviews for all Vine reviews\r\n",
+        "five_star_reviews_y_pct = (five_star_reviews_y/total_reviews_y) * 100\r\n",
+        "five_star_reviews_y_pct\r\n"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "34.12322274881517"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qf6DfCj8dn2W",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "be8918fd-1bdd-4d0d-ef70-92296aa388c2"
       },
       "source": [
         "# Percentage of 5-star reviews for all non-Vine reviews\r\n",
         "\r\n",
-        "five_star_reviews_n_pct = (five_star_reviews_n/total_reviews_n) *100\r\n",
+        "five_star_reviews_n_pct = (five_star_reviews_n/total_reviews_n)*100\r\n",
         "five_star_reviews_n_pct"
       ],
-      "execution_count": 22,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,9 +638,20 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 29
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x2li2_Eke9GS"
+      },
+      "source": [
+        "\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
